@@ -25,7 +25,7 @@ and \code{to}.}
 \item{plot}{logical. Defaults to \code{TRUE}. Plot the results.}
 
 \item{...}{Allows additional plotting controls to be passed, such as \code{pos}
-and \code{message = FALSE}.}
+and \code{quiet = TRUE}.}
 }
 \value{
 A list object of class \code{calc_rate}.
@@ -77,7 +77,7 @@ coefficients, and summary plots of fit and residuals. If multiple rates have
 been calculated, by default the first is plotted. Others can be plotted by
 changing the \code{pos} argument either in the main function call, or by plotting
 the output, e.g. \code{plot(object, pos = 2)}. Console output messages can be
-suppressed using \code{message = FALSE}.
+suppressed using \code{quiet = TRUE}.
 }
 
 \subsection{S3 Generic Functions}{
